--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nodemon --exec npx ts-node ./src/index.ts",
     "build": "tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.6.5",
@@ -17,9 +17,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.11",
+    "@types/jest": "^29.5.12",
     "@types/mongoose": "^5.10.5",
     "@types/node": "^14.14.41",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.3",
+    "ts-jest": "^29.1.2",
     "ts-node": "^9.1.1",
     "typescript": "^5.3.3"
   }
